[gd_scene load_steps=6 format=2]

[ext_resource path="res://Carnevalee Freakshow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Transmission.gd" type="Script" id=2]
[ext_resource path="res://Font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.000758708
anchor_top = -0.00129481
anchor_right = 0.999241
anchor_bottom = 0.998705
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.5
margin_top = 68.3665
margin_right = 182.5
margin_bottom = 152.367
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.0352941, 0.584314, 0.32549, 1 )
text = "Level Complete"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.00129481
anchor_right = 0.5
anchor_bottom = -0.00129481
margin_left = -317.777
margin_top = 188.777
margin_right = 315.223
margin_bottom = 441.777
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.552941, 0.588235, 0.572549, 1 )
bbcode_enabled = true
bbcode_text = "[center]You earned [center]"
text = "You earned "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 588.884
margin_top = 428.068
margin_right = 900.884
margin_bottom = 525.068
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Go Deeper"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_left = -0.000758678
anchor_right = -0.000758678
margin_left = 130.518
margin_top = 434.283
margin_right = 442.518
margin_bottom = 531.283
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Go Shopping"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
